--- a/src/app/components/users/teacher/liveclass/liveclass.component.html
+++ b/src/app/components/users/teacher/liveclass/liveclass.component.html
@@ -1,3 +1,14 @@
-<p>
-  liveclass works!
-</p>
+<input type="text" [(ngModel)]="roomToCreate" />
+
+<button class="btn btn-outline-info" (click)="initRtc()">
+  Start
+</button>
+<br />
+<button class="btn btn-outline-info" (click)="showFriendsFace()">
+  Show Remote
+</button>
+
+<video [src]="friendsVideo" controls autoplay #friendsVideo></video>
+<!-- *ngIf="displayFriendsVideo" -->
+<video [src]="myVideo" controls autoplay muted #myVideo></video>
+<!-- *ngIf="displayMyVideo" -->
