--- a/src/app/components/users/student/liveclass/liveclass.component.html
+++ b/src/app/components/users/student/liveclass/liveclass.component.html
@@ -1,15 +1,14 @@
-<!-- <input type="text" [(ngModel)]="roomToJoin" />
-<button class="btn btn-outline-primary" (click)="setupWebRtc()">
-  Setup
+<input type="text" [(ngModel)]="roomToJoin" />
+<button class="btn btn-outline-primary" (click)="sendMessage('Bismillah...')">
+  Send Message
 </button>
-<button class="btn btn-outline-primary" (click)="initRtc()">
+<button class="btn btn-outline-primary" (click)="joinClass()">
   Join Class
 </button>
 
 <video [src]="teacherVideo" controls autoplay #teacherVideo></video>
-<video [src]="myVideo" controls autoplay #myVideo></video> -->
+<video [src]="myVideo" controls autoplay #myVideo></video>
 
-
-<iframe src="https://rtcmulticonnection.herokuapp.com/demos/Video-Broadcasting.html" width="100%" height="500px" allow="geolocation; microphone; camera">
+<!-- <iframe src="https://rtcmulticonnection.herokuapp.com/demos/Video-Broadcasting.html" width="100%" height="500px" allow="geolocation; microphone; camera">
   <p>Your browser does not support iframes.</p>
-</iframe>
+</iframe> -->
