--- a/src/app/components/users/teacher/makequiz/makequiz.component.html
+++ b/src/app/components/users/teacher/makequiz/makequiz.component.html
@@ -23,105 +23,123 @@
 </div> -->
 
 <form [formGroup]="quizForm">
-    <!-- <hr />
+  <!-- <hr />
     <pre>value: {{ quizForm.value | json }}</pre>
     <hr /> -->
-    <div class="form-row">
-      <div class="col-md-3">
-        <label class="font-weight-bold">Subject</label>
-        <select class="custom-select" formControlName="subject">
-          <option selected disabled="true">Choose Subject</option>
-          <option value="Islamiyat">Islamiyat</option>
-          <option value="Maths">Maths</option>
-          <option value="Chemistry">Chemistry</option>
-          <option value="Physics">Physics</option>
-        </select>
-      </div>
-      <div class="col-md-3">
-        <label class="font-weight-bold">Title</label>
-        <input type="text" class="form-control" formControlName="title" />
-      </div>
-      <div class="col-md-3">
-        <label class="font-weight-bold">Duration</label>
-        <input
-          type="number"
-          class="form-control"
-          placeholder="Quiz Duration (min)"
-          formControlName="duration"
-        />
-      </div>
-      <div class="col-md-3">
-        <label class="font-weight-bold">Total Marks</label>
-        <input
-          type="number"
-          class="form-control"
-          placeholder="Total Marks"
-          formControlName="totalMarks"
-        />
-      </div>
+  <div class="form-row">
+    <div class="col-md-2">
+      <mat-form-field class="p-0">
+        <mat-label>Class</mat-label>
+        <mat-select formControlName="className">
+          <mat-option
+            [value]="class"
+            *ngFor="let class of classes ? classes[0] : classes"
+          >
+            {{ class.data.className }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
-    <div class="row mt-4">
-      <div class="col-sm-12">
-        <div class="animated fadeIn">
-          <div class="card">
-            <div class="card-header">
-              <label class="font-weight-bold">{{ quizForm.value.subject }}</label>
-              <div class="pl-2 pr-2 float-right">
-                <button
-                  class="btn p-0"
-                  popover="View"
-                  triggers="mouseenter:mouseleave"
-                  (click)="staticModal.show()"
-                >
-                  <span><i class="text-success fa fa-eye"></i> </span>
-                </button>
-                <button
-                  class="btn p-0 ml-2"
-                  popover="Save"
-                  triggers="mouseenter:mouseleave"
-                  (click)="saveQuiz()"
-                >
-                  <span> <i class="text-primary fa fa-save"></i> </span>
-                </button>
-                <button
-                  class="btn p-0 ml-2"
-                  popover="Upload"
-                  triggers="mouseenter:mouseleave"
-                >
-                  <span> <i class="text-warning fa fa-upload"></i> </span>
-                </button>
-              </div>
+    <div class="col-md-3">
+      <mat-form-field class="p-0">
+        <mat-label>Subject</mat-label>
+        <mat-select formControlName="subject">
+          <mat-option
+            [value]="currentSubject"
+            *ngFor="let currentSubject of classes ? classes[0] : classes"
+          >
+            <!-- {{ class.data.className == className.value ? class.data.subject }} -->
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="col-md-3">
+      <mat-form-field class="p-0">
+        <mat-label>Title</mat-label>
+        <input matInput type="text" formControlName="title" />
+      </mat-form-field>
+    </div>
+    <div class="col-md-3">
+      <label class="font-weight-bold">Duration</label>
+      <input
+        type="number"
+        class="form-control"
+        placeholder="Quiz Duration (min)"
+        formControlName="duration"
+      />
+    </div>
+    <div class="col-md-3">
+      <label class="font-weight-bold">Total Marks</label>
+      <input
+        type="number"
+        class="form-control"
+        placeholder="Total Marks"
+        formControlName="totalMarks"
+      />
+    </div>
+  </div>
+  <div class="row mt-4">
+    <div class="col-sm-12">
+      <div class="animated fadeIn">
+        <div class="card">
+          <div class="card-header">
+            <label class="font-weight-bold">{{ quizForm.value.subject }}</label>
+            <div class="pl-2 pr-2 float-right">
+              <button
+                class="btn p-0"
+                popover="View"
+                triggers="mouseenter:mouseleave"
+                (click)="staticModal.show()"
+              >
+                <span><i class="text-success fa fa-eye"></i> </span>
+              </button>
+              <button
+                class="btn p-0 ml-2"
+                popover="Save"
+                triggers="mouseenter:mouseleave"
+                (click)="saveQuiz()"
+              >
+                <span> <i class="text-primary fa fa-save"></i> </span>
+              </button>
+              <button
+                class="btn p-0 ml-2"
+                popover="Upload"
+                triggers="mouseenter:mouseleave"
+              >
+                <span> <i class="text-warning fa fa-upload"></i> </span>
+              </button>
             </div>
-            <div class="card-body" formArrayName="questions">
-              <ol class="p-0">
-                <li
-                  class="mb-4"
-                  *ngFor="
-                    let question of getQuestions(quizForm);
-                    let questionNumber = index
-                  "
-                  [formGroupName]="questionNumber"
-                >
-                  <div>
-                    <div class="form-group mb-1 input-group">
-                      <input
-                        type="text"
-                        class="form-control-plaintext border border-secondary rounded p-1"
-                        placeholder="Type your question here..."
-                        formControlName="text"
-                      />
-                      <div class="input-group-append">
-                        <button
-                          class="btn border border-danger rounded"
-                          popover="Delete Question"
-                          triggers="mouseenter:mouseleave"
-                          (click)="deleteQuestion(questionNumber)"
-                        >
-                          <span><i class="text-danger fa fa-trash"></i> </span>
-                        </button>
-                      </div>
+          </div>
+          <div class="card-body" formArrayName="questions">
+            <ol class="p-0">
+              <li
+                class="mb-4"
+                *ngFor="
+                  let question of getQuestions(quizForm);
+                  let questionNumber = index
+                "
+                [formGroupName]="questionNumber"
+              >
+                <div>
+                  <div class="form-group mb-1 input-group">
+                    <input
+                      type="text"
+                      class="form-control-plaintext border border-secondary rounded p-1"
+                      placeholder="Type your question here..."
+                      formControlName="text"
+                    />
+                    <div class="input-group-append">
+                      <button
+                        class="btn border border-danger rounded"
+                        popover="Delete Question"
+                        triggers="mouseenter:mouseleave"
+                        (click)="deleteQuestion(questionNumber)"
+                      >
+                        <span><i class="text-danger fa fa-trash"></i> </span>
+                      </button>
                     </div>
-                    <!-- <div class="form-check form-check-inline">
+                  </div>
+                  <!-- <div class="form-check form-check-inline">
                       <input
                         class="form-check-input"
                         type="radio"
@@ -130,7 +148,7 @@
                       />
                       <label class="form-check-label">MCQ</label>
                     </div> -->
-                    <!-- <div class="form-check form-check-inline">
+                  <!-- <div class="form-check form-check-inline">
                       <input
                         class="form-check-input"
                         type="radio"
@@ -139,78 +157,78 @@
                       />
                       <label class="form-check-label">True/False</label>
                     </div> -->
-                    <div
-                      class="btn-group btn-group-sm d-flex"
-                      btnRadioGroup
-                      formControlName="type"
-                      tooltip="Question Type"
-                    >
-                      <label btnRadio="mcq" class="btn btn-outline-dark">
-                        MCQ
-                      </label>
-                      <label btnRadio="tf" class="btn btn-outline-dark">
-                        T/F
-                      </label>
-                    </div>
-                    <div *ngIf="question.value.type == 'mcq'">
-                      <ol class="list-inline" formArrayName="mcqOptions">
-                        <li
-                          class="list-inline-item ml-4 mt-2"
-                          *ngFor="
-                            let mcqOption of getMcqOptions(question);
-                            let optionNumber = index
-                          "
-                          [formGroupName]="optionNumber"
-                        >
-                          <div class="input-group">
-                            <input
-                              #option
-                              value="{{ optionNumber }}"
-                              name="{{ questionNumber }}"
-                              class="form-check-input"
-                              type="radio"
-                              [checked]="
-                                optionNumber == question.value.mcqCorrectOption
-                              "
-                              (click)="
-                                updateCorrectMcqOption(
-                                  questionNumber,
-                                  option.value
-                                )
-                              "
-                            />
-                            <input
-                              class="form-control-plaintext input-sm border border-secondary rounded p-0 pl-1"
-                              type="text"
-                              formControlName="option"
-                              placeholder="Option {{ optionNumber + 1 }}"
-                            />
-                            <button
-                              class="btn btn-sm border border-danger rounded py-0"
-                              popover="Delete Option"
-                              triggers="mouseenter:mouseleave"
-                              (click)="deleteOption(questionNumber, optionNumber)"
-                            >
-                              <span
-                                ><i class="text-danger fa fa-trash"></i>
-                              </span>
-                            </button>
-                          </div>
-                        </li>
-                        <div class="d-inline">
+                  <div
+                    class="btn-group btn-group-sm d-flex"
+                    btnRadioGroup
+                    formControlName="type"
+                    tooltip="Question Type"
+                  >
+                    <label btnRadio="mcq" class="btn btn-outline-dark">
+                      MCQ
+                    </label>
+                    <label btnRadio="tf" class="btn btn-outline-dark">
+                      T/F
+                    </label>
+                  </div>
+                  <div *ngIf="question.value.type == 'mcq'">
+                    <ol class="list-inline" formArrayName="mcqOptions">
+                      <li
+                        class="list-inline-item ml-4 mt-2"
+                        *ngFor="
+                          let mcqOption of getMcqOptions(question);
+                          let optionNumber = index
+                        "
+                        [formGroupName]="optionNumber"
+                      >
+                        <div class="input-group">
+                          <input
+                            #option
+                            value="{{ optionNumber }}"
+                            name="{{ questionNumber }}"
+                            class="form-check-input"
+                            type="radio"
+                            [checked]="
+                              optionNumber == question.value.mcqCorrectOption
+                            "
+                            (click)="
+                              updateCorrectMcqOption(
+                                questionNumber,
+                                option.value
+                              )
+                            "
+                          />
+                          <input
+                            class="form-control-plaintext input-sm border border-secondary rounded p-0 pl-1"
+                            type="text"
+                            formControlName="option"
+                            placeholder="Option {{ optionNumber + 1 }}"
+                          />
                           <button
-                            class="btn btn-sm btn-secondary border border-secondary py-0 mb-1 ml-4"
-                            popover="Add Option"
+                            class="btn btn-sm border border-danger rounded py-0"
+                            popover="Delete Option"
                             triggers="mouseenter:mouseleave"
-                            (click)="addMcqOption(questionNumber)"
+                            (click)="deleteOption(questionNumber, optionNumber)"
                           >
-                            <span><i class="text-dark fa fa-plus"></i></span>
+                            <span
+                              ><i class="text-danger fa fa-trash"></i>
+                            </span>
                           </button>
                         </div>
-                      </ol>
-                    </div>
-                    <div *ngIf="question.value.type == 'tf'">
-                      <!-- <ol class="list-inline mt-2">
+                      </li>
+                      <div class="d-inline">
+                        <button
+                          class="btn btn-sm btn-secondary border border-secondary py-0 mb-1 ml-4"
+                          popover="Add Option"
+                          triggers="mouseenter:mouseleave"
+                          (click)="addMcqOption(questionNumber)"
+                        >
+                          <span><i class="text-dark fa fa-plus"></i></span>
+                        </button>
+                      </div>
+                    </ol>
+                  </div>
+                  <div *ngIf="question.value.type == 'tf'">
+                    <!-- <ol class="list-inline mt-2">
                         <li class="list-inline-item ml-4 mt-2">
                           <div class="input-group">
                             <input
@@ -234,71 +252,70 @@
                           </div>
                         </li>
                       </ol> -->
-                      <div
-                        class="btn-group btn-group-sm "
-                        btnRadioGroup
-                        formControlName="tfCorrectOption"
-                        tooltip="Correct Option"
-                      >
-                        <label btnRadio="true" class="btn btn-outline-primary">
-                          True
-                        </label>
-                        <label btnRadio="false" class="btn btn-outline-primary">
-                          False
-                        </label>
-                      </div>
+                    <div
+                      class="btn-group btn-group-sm "
+                      btnRadioGroup
+                      formControlName="tfCorrectOption"
+                      tooltip="Correct Option"
+                    >
+                      <label btnRadio="true" class="btn btn-outline-primary">
+                        True
+                      </label>
+                      <label btnRadio="false" class="btn btn-outline-primary">
+                        False
+                      </label>
                     </div>
                   </div>
-                </li>
-              </ol>
-              <div class="row mt-4">
-                <div class="col-sm-12">
-                  <button
-                    class="btn btn-secondary btn-lg btn-block pt-0 pb-0"
-                    popover="Add Question"
-                    triggers="mouseenter:mouseleave"
-                    (click)="addQuestion()"
-                  >
-                    <span><i class="text-dark fa fa-plus"></i> </span>
-                  </button>
                 </div>
+              </li>
+            </ol>
+            <div class="row mt-4">
+              <div class="col-sm-12">
+                <button
+                  class="btn btn-secondary btn-lg btn-block pt-0 pb-0"
+                  popover="Add Question"
+                  triggers="mouseenter:mouseleave"
+                  (click)="addQuestion()"
+                >
+                  <span><i class="text-dark fa fa-plus"></i> </span>
+                </button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </form>
-  
-  <div
-    class="modal fade"
-    bsModal
-    #staticModal="bs-modal"
-    [config]="{ backdrop: 'static' }"
-    tabindex="-1"
-    role="dialog"
-    aria-labelledby="dialog-static-name"
-  >
-    <div class="modal-dialog modal-sm">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 id="dialog-static-name" class="modal-title pull-left">
-            Static modal
-          </h4>
-          <button
-            type="button"
-            class="close pull-right"
-            aria-label="Close"
-            (click)="staticModal.hide()"
-          >
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          This is static modal, backdrop click will not close it. Click
-          <b>&times;</b> to close modal.
-        </div>
+  </div>
+</form>
+
+<div
+  class="modal fade"
+  bsModal
+  #staticModal="bs-modal"
+  [config]="{ backdrop: 'static' }"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="dialog-static-name"
+>
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 id="dialog-static-name" class="modal-title pull-left">
+          Static modal
+        </h4>
+        <button
+          type="button"
+          class="close pull-right"
+          aria-label="Close"
+          (click)="staticModal.hide()"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        This is static modal, backdrop click will not close it. Click
+        <b>&times;</b> to close modal.
       </div>
     </div>
   </div>
-  
+</div>
