✔ Signup Page Icons Updated

--- a/src/app/components/account/signup/signup.component.html
+++ b/src/app/components/account/signup/signup.component.html
@@ -235,7 +235,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text"
-                          ><i class="fa fa-user"></i
+                          ><i class="icon-calendar"></i
                         ></span>
                       </div>
                       <input
@@ -250,7 +250,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text"
-                          ><i class="fa fa-user"></i
+                          ><i class="icon-home"></i
                         ></span>
                       </div>
                       <input
@@ -284,7 +284,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text"
-                          ><i class="fa fa-user"></i
+                          ><i class="icon-location-pin"></i
                         ></span>
                       </div>
                       <input
@@ -316,7 +316,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text"
-                          ><i class="fa fa-user"></i
+                          ><i class="icon-phone"></i
                         ></span>
                       </div>
                       <input
@@ -352,7 +352,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text">
-                          <i class="fa fa-user"></i>
+                          <i class="icon-calendar"></i>
                         </span>
                       </div>
                       <input
@@ -367,7 +367,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text">
-                          <i class="fa fa-user"></i>
+                          <i class="icon-home"></i>
                         </span>
                       </div>
                       <input
@@ -401,7 +401,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text">
-                          <i class="fa fa-user"></i>
+                          <i class="icon-location-pin"></i>
                         </span>
                       </div>
                       <input
@@ -435,7 +435,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text">
-                          <i class="fa fa-user"></i>
+                          <i class="icon-phone"></i>
                         </span>
                       </div>
                       <input
@@ -463,14 +463,14 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text">
-                          <i class="fa fa-user"></i>
+                          <i class="icon-graduation"></i>
                         </span>
                       </div>
                       <input
                         type="tel"
                         formControlName="qualification"
                         class="form-control"
-                        placeholder="E.g: Phd in Electronics [Yet to be decided]"
+                        placeholder="E.g: Phd in Electronics"
                       />
                     </div>
                   </div>
@@ -499,7 +499,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text">
-                          <i class="fa fa-user"></i>
+                          <i class="icon-calendar"></i>
                         </span>
                       </div>
                       <input
@@ -514,7 +514,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text">
-                          <i class="fa fa-user"></i>
+                          <i class="icon-home"></i>
                         </span>
                       </div>
                       <input
@@ -548,7 +548,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text">
-                          <i class="fa fa-user"></i>
+                          <i class="icon-location-pin"></i>
                         </span>
                       </div>
                       <input
@@ -582,7 +582,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text">
-                          <i class="fa fa-user"></i>
+                          <i class="icon-phone"></i>
                         </span>
                       </div>
                       <input
@@ -649,7 +649,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text"
-                          ><i class="fa fa-user"></i
+                          ><i class="icon-flag"></i
                         ></span>
                       </div>
                       <input
@@ -664,7 +664,7 @@
                     <div class="input-group">
                       <div class="input-group-prepend">
                         <span class="input-group-text"
-                          ><i class="fa fa-user"></i
+                          ><i class="icon-speech"></i
                         ></span>
                       </div>
                       <input
