✔ Nav Bar Icons Updated ✔ Academy Admin Dashboard Class Card Updated ✔ Student and Teacher Request cards updated

--- a/src/app/components/users/academyadmin/classrooms/classrooms.component.html
+++ b/src/app/components/users/academyadmin/classrooms/classrooms.component.html
@@ -1,8 +1,4 @@
-<!-- <p>
-  Idhr classrooms k cards show hongy...
-  * ✔Classroom cards
-  * Modals
-</p> -->
+
 
 <div class="animated fadeIn">
   <div class="col-sm-6 col-md-4 col-lg-2 pb-4"></div>
@@ -39,10 +35,9 @@
                 <strong> {{ classroom.data.students.length }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-user"></i> Teacher :
-                <strong> {{ classroom.data.teacher.name }} </strong>
+                <i class="icon-people"></i> Teacher :
+                <strong> {{ classroom.data.teacher.teacherName }} </strong>
               </li>
-              <li class="list-group-item bg-dark p-1">Performance Graph</li>
             </ul>
           </div>
         </div>
