--- a/src/app/components/users/academyadmin/requests/studentrequests/studentrequests.component.html
+++ b/src/app/components/users/academyadmin/requests/studentrequests/studentrequests.component.html
@@ -26,24 +26,17 @@
           </button>
           <!-- (onHover)="hoveringOver($event)"
             (onLeave)="resetStar()" -->
-          <rating
-            class="ml-3"
-            [(ngModel)]="rate"
-            [max]="max"
-            [readonly]="isReadonly"
-            [titles]="['one', 'two', 'three']"
-            name="rate"
-          ></rating>
+          
         </div>
         <div class="card-body">
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Class :
+                <i class="icon-badge"></i> Class :
                 <strong> {{ request.data.className }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Subject :
+                <i class="icon-notebook"></i> Subject :
                 <strong> {{ request.data.subjectName }} </strong>
               </li>
             </ul>
@@ -91,24 +84,17 @@
           </button>
           <!-- (onHover)="hoveringOver($event)"
             (onLeave)="resetStar()" -->
-          <rating
-            class="ml-3"
-            [(ngModel)]="rate"
-            [max]="max"
-            [readonly]="isReadonly"
-            [titles]="['one', 'two', 'three']"
-            name="rate"
-          ></rating>
+          
         </div>
         <div class="card-body">
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Class :
+                <i class="icon-badge"></i> Class :
                 <strong> {{ request.data.className }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Subject :
+                <i class="icon-notebook"></i> Subject :
                 <strong> {{ request.data.subjectName }} </strong>
               </li>
             </ul>
@@ -156,24 +142,17 @@
           </button>
           <!-- (onHover)="hoveringOver($event)"
             (onLeave)="resetStar()" -->
-          <rating
-            class="ml-3"
-            [(ngModel)]="rate"
-            [max]="max"
-            [readonly]="isReadonly"
-            [titles]="['one', 'two', 'three']"
-            name="rate"
-          ></rating>
+          
         </div>
         <div class="card-body">
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Class :
+                <i class="icon-badge"></i> Class :
                 <strong> {{ request.data.className }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Subject :
+                <i class="icon-notebook"></i> Subject :
                 <strong> {{ request.data.subjectName }} </strong>
               </li>
             </ul>
@@ -232,7 +211,7 @@
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Applied For :
+                <i class="icon-badge"></i> Applied For :
                 <strong>English</strong>
               </li>
             </ul>
