--- a/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
+++ b/src/app/components/users/academyadmin/academyadmindashboard/academyadmindashboard.component.html
@@ -55,7 +55,7 @@
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i
+                <i class="icon-notebook"></i
                 ><a href="www.google.com" target="_blank" class="text-white">
                   Subjects :
                   <strong>
@@ -66,6 +66,7 @@
               <li class="list-group-item bg-dark p-1">
                 <i class="icon-people"></i> Students :
                 <strong>
+                  {{class | json}}
                   {{ class.data.students ? class.data.students.length : 0 }}
                 </strong>
               </li>
@@ -76,7 +77,7 @@
                 </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Classrooms :
+                <i class="icon-badge"></i> Classrooms :
                 <strong>
                   {{ class.data.classrooms ? class.data.classrooms.length : 0 }}
                 </strong>
