--- a/src/app/components/users/academyadmin/teachers/teachers.component.html
+++ b/src/app/components/users/academyadmin/teachers/teachers.component.html
@@ -24,19 +24,12 @@
           <div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-people"></i> Class :
+                <i class="icon-badge"></i> Class :
                 <strong> {{ teacher.data.className }} </strong>
               </li>
               <li class="list-group-item bg-dark p-1">
-                <i class="icon-user"></i> Subject :
+                <i class="icon-notebook"></i> Subject :
                 <strong> {{ teacher.data.subjectName }} </strong>
-              </li>
-              <li class="list-group-item bg-dark p-1">
-                <i class="icon-user"></i> Recorded Lectures :
-                <strong> 10 </strong>
-              </li>
-              <li class="list-group-item bg-dark p-1">
-                <i class="icon-user"></i> Live Lectures : <strong> 16 </strong>
               </li>
             </ul>
           </div>
