✔ Al-Taleem Logo Added

--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -1,9 +1,9 @@
 <app-header
   [fixed]="true"
   [navbarBrandFull]="{
-    width: 189,
-    height: 125,
-    src: 'assets/img/brand/Al-Taleem.svg',
+    width: 50,
+    height: 50,
+    src: 'assets/img/brand/Al-Taleem.png',
     alt: 'CoreUI Logo'
   }"
   [navbarBrandMinimized]="{
