temp changes from Toshiba to HP

--- a/src/app/components/users/academyadmin/teachers/teachers.component.html
+++ b/src/app/components/users/academyadmin/teachers/teachers.component.html
@@ -13,6 +13,7 @@
             class="btn btn-sm btn-outline-danger  float-right ml-2"
             matTooltip="Delete - I think this option is not justifiable!! - DISCUSS"
             triggers="mouseenter:mouseleave"
+            (click)="deleteTeacher(teacher)"
           >
             <span><i class="fa fa-trash"></i> </span>
           </button>
