--- a/src/app/components/users/teacher/course/assignments/addassignment/addassignment.component.html
+++ b/src/app/components/users/teacher/course/assignments/addassignment/addassignment.component.html
@@ -9,21 +9,41 @@
       <form [formGroup]="assignmentForm">
         <div class="form-group">
           <mat-form-field>
+            <mat-label>Choose Academy</mat-label>
+            <input type="text" matInput formControlName="academy" readonly />
+            <!-- <mat-select formControlName="academy">
+              <mat-option
+                *ngFor="let academy of approvedRequests[0]"
+                [value]="academy"
+                >{{ academy.data.academyName }}</mat-option
+              >
+            </mat-select> -->
+          </mat-form-field>
+        </div>
+        <div class="form-group">
+          <mat-form-field>
             <mat-label>Choose Class</mat-label>
-            <mat-select formControlName="class">
+            <input type="text" matInput formControlName="class" readonly />
+            <!-- <mat-select formControlName="class">
               <mat-option *ngFor="let class of classes" [value]="class">{{
-                class
+                  requests.data
               }}</mat-option>
-            </mat-select>
+            </mat-select> -->
           </mat-form-field>
         </div>
         <div class="form-group">
           <mat-form-field>
             <mat-label>Choose Subject</mat-label>
             <mat-select formControlName="subject">
-              <mat-option *ngFor="let subject of subjects" [value]="subject">{{
-                subject
-              }}</mat-option>
+              <mat-option
+                *ngFor="let request of approvedRequests[0]"
+                [value]="{
+                  subjectId: request.data.subjectId,
+                  subjectName: request.data.subjectName
+                }"
+                (click)="updateValues(request)"
+                >{{ request.data.subjectName }}</mat-option
+              >
             </mat-select>
           </mat-form-field>
         </div>
@@ -66,6 +86,7 @@
         <div class="col 6">
           <button
             (click)="fileInput.click()"
+            [disabled]="disableUploadButton"
             class="btn btn-outline-info btn-block border-0 font-weight-bold"
           >
             Attach File
@@ -75,6 +96,7 @@
         <div class="col 6">
           <button
             (click)="createAssignment()"
+            [disabled]="buttonHidden"
             class="btn btn-outline-success btn-block border-0 font-weight-bold"
           >
             Upload
