✔ Partial Notification added for teacher annoucements

--- a/src/app/components/users/teacher/classrooms/classrooms.component.html
+++ b/src/app/components/users/teacher/classrooms/classrooms.component.html
@@ -12,6 +12,7 @@
             class="btn btn-sm btn-warning  float-right ml-2"
             popover="Announcement"
             triggers="mouseenter:mouseleave"
+            (click)="addAnnouncement()"
           >
             <span><i class="fa fa-bullhorn"></i> </span>
           </button>
