--- a/src/app/components/users/student/liveclass/liveclass.component.html
+++ b/src/app/components/users/student/liveclass/liveclass.component.html
@@ -21,7 +21,7 @@
         Request Permission For Question
       </button>
     </div>
-    <div class="col-12">
+    <!-- <div class="col-12">
       <div class="col-6">
         <angular-editor
           [(ngModel)]="htmlContent"
@@ -33,7 +33,7 @@
           Ask Question
         </button>
       </div>
-    </div>
+    </div> -->
   </div>
   <br /><br />
   <div class="row">
