--- a/src/app/components/account/login/login.component.html
+++ b/src/app/components/account/login/login.component.html
@@ -7,7 +7,10 @@
             <div class="card-group">
               <div class="card">
                 <div class="card-body">
-                  <form [formGroup]="loginForm" (keydown)="keyDownFunction($event)">
+                  <form
+                    [formGroup]="loginForm"
+                    (keydown)="keyDownFunction($event)"
+                  >
                     <h1>Al-Taleem Login</h1>
                     <p class="text-muted">Sign In to your account</p>
                     <div class="input-group mb-3">
@@ -45,6 +48,7 @@
                           type="button"
                           class="btn btn-primary px-4"
                           (click)="login()"
+                          [disabled]="btnLoginDisable || !loginForm.valid"
                         >
                           Login
                         </button>
