--- a/src/app/components/users/teacher/course/assignments/assignments.component.html
+++ b/src/app/components/users/teacher/course/assignments/assignments.component.html
@@ -8,49 +8,50 @@
     <div class="row">
       <div class="col-sm-3">
         <mat-form-field>
-          <mat-label>Posted/Submitted</mat-label>
-          <mat-select [(value)]="selected">
-            <mat-option>None</mat-option>
-            <mat-option value="option1">Posted</mat-option>
-            <mat-option value="option2">Submitted By Students</mat-option>
+          <mat-label>Choose Academy</mat-label>
+          <mat-select aria-disabled="!approvedAcademies">
+            <mat-option
+              *ngFor="let academy of approvedAcademies"
+              [value]="academy.academyId"
+              (click)="getAcademyData(academy.academyId)"
+              >{{ academy.academyName }}</mat-option
+            >
           </mat-select>
         </mat-form-field>
       </div>
       <div class="col-sm-3">
         <mat-form-field>
-          <mat-label>Choose Class</mat-label>
-          <mat-select [(value)]="selected">
+          <mat-label>Choose Classroom</mat-label>
+          <mat-select>
             <mat-option>None</mat-option>
-            <mat-option value="option1">9</mat-option>
-            <mat-option value="option2">10</mat-option>
-            <mat-option value="option3">11</mat-option>
-            <mat-option value="option3">12</mat-option>
+            <mat-option *ngFor="let classroom of classrooms" (click)="getSubjects(classroom.data.class.classId)" >
+              {{ classroom.data.class.className }}
+            </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
       <div class="col-sm-3">
         <mat-form-field>
           <mat-label>Choose Subject</mat-label>
-          <mat-select [(value)]="selected">
+          <mat-select>
             <mat-option>None</mat-option>
-            <mat-option value="option1">Maths</mat-option>
-            <mat-option value="option2">Chemistry</mat-option>
-            <mat-option value="option3">Physics</mat-option>
-            <mat-option value="option3">Biology</mat-option>
+            <mat-option *ngFor="let classroom of classrooms">
+              {{ classroom.data.subject.subjectName }}
+            </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col-sm-3">
+      <!-- <div class="col-sm-3">
         <mat-form-field>
-          <mat-label>Assignment No</mat-label>
-          <mat-select [(value)]="selected">
+          <mat-label>Assignment Title</mat-label>
+          <mat-select>
             <mat-option>None</mat-option>
             <mat-option value="option1">Option 1</mat-option>
             <mat-option value="option2">Option 2</mat-option>
             <mat-option value="option3">Option 3</mat-option>
           </mat-select>
         </mat-form-field>
-      </div>
+      </div> -->
     </div>
   </mat-card>
 
@@ -68,7 +69,6 @@
           mat-button
           class="float-right btn btn-success"
           (click)="openDialog()"
-          
         >
           Post Assignment
         </button>
@@ -82,49 +82,55 @@
         />
       </mat-form-field>
       <div class="example-container">
-      <table mat-table [dataSource]="dataSource">
-        <!-- Position Column -->
-        <ng-container matColumnDef="assignmentNumber">
-          <th mat-header-cell *matHeaderCellDef><strong>No.</strong></th>
-          <td mat-cell *matCellDef="let element">{{ element.assignmentNumber }}</td>
-        </ng-container>
+        <table mat-table [dataSource]="dataSource">
+          <!-- Position Column -->
+          <ng-container matColumnDef="assignmentNumber">
+            <th mat-header-cell *matHeaderCellDef><strong>No.</strong></th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.assignmentNumber }}
+            </td>
+          </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="assignmentTitle">
-          <th mat-header-cell *matHeaderCellDef><strong>Title</strong></th>
-          <td mat-cell *matCellDef="let element">{{ element.assignmentTitle }}</td>
-        </ng-container>
+          <!-- Name Column -->
+          <ng-container matColumnDef="assignmentTitle">
+            <th mat-header-cell *matHeaderCellDef><strong>Title</strong></th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.assignmentTitle }}
+            </td>
+          </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="addedDate">
-          <th mat-header-cell *matHeaderCellDef><strong>Added On</strong></th>
-          <td mat-cell *matCellDef="let element">{{ element.addedDate }}</td>
-        </ng-container>
+          <!-- Weight Column -->
+          <ng-container matColumnDef="addedDate">
+            <th mat-header-cell *matHeaderCellDef><strong>Added On</strong></th>
+            <td mat-cell *matCellDef="let element">{{ element.addedDate }}</td>
+          </ng-container>
 
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="dueDate">
-          <th mat-header-cell *matHeaderCellDef><strong>Due Date</strong></th>
-          <td mat-cell *matCellDef="let element">{{ element.dueDate }}</td>
-        </ng-container>
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="dueDate">
+            <th mat-header-cell *matHeaderCellDef><strong>Due Date</strong></th>
+            <td mat-cell *matCellDef="let element">{{ element.dueDate }}</td>
+          </ng-container>
 
-        <ng-container matColumnDef="totalMarks">
-          <th mat-header-cell *matHeaderCellDef>
-            <strong>Total Marks</strong>
-          </th>
-          <td mat-cell *matCellDef="let element">{{ element.totalMarks }}</td>
-        </ng-container>
+          <ng-container matColumnDef="totalMarks">
+            <th mat-header-cell *matHeaderCellDef>
+              <strong>Total Marks</strong>
+            </th>
+            <td mat-cell *matCellDef="let element">{{ element.totalMarks }}</td>
+          </ng-container>
 
-        <ng-container matColumnDef="controls">
-          <th mat-header-cell *matHeaderCellDef><strong>Controls</strong></th>
-          <td mat-cell *matCellDef="let element">{{ element.controls }}</td>
-        </ng-container>
+          <ng-container matColumnDef="controls">
+            <th mat-header-cell *matHeaderCellDef><strong>Controls</strong></th>
+            <td mat-cell *matCellDef="let element">{{ element.controls }}</td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
+          <tr
+            mat-header-row
+            *matHeaderRowDef="displayedColumns; sticky: true"
+          ></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+      </div>
     </div>
-  </div>
-    
   </mat-card>
 </div>
 
@@ -133,7 +139,7 @@
 <!-- ******************************** SUBMITTED ASSIGNMENTS PAGE TEACHER *****************************-->
 <!-- ******************************** SUBMITTED ASSIGNMENTS PAGE TEACHER *****************************-->
 
-<hr>
+<hr />
 <div class="row">
   <div class="col-sm-12">
     <div class="card">
@@ -157,7 +163,6 @@
               dropdownToggle
               type="button"
               class="btn btn-primary btn-sm"
-              
             >
               Download All <span class="caret"></span>
             </button>
