--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -75,12 +75,24 @@
         <a class="dropdown-item" [routerLink]="['profile', user.uid]"
           ><i class="fa fa-user"></i> Profile</a
         >
-
-        <!-- <a class="dropdown-item" href="#"
-          ><i class="fa fa-wrench"></i> Setting</a
+        <!-- <a
+          *ngIf="user.userType == 'academyadmin'"
+          class="dropdown-item"
+          [routerLink]="['profile', user.uid]"
+          ><i class="fa fa-user"></i> Profile</a
+        >
+        <a
+          *ngIf="user.userType == 'student'"
+          class="dropdown-item"
+          [routerLink]="['/student/profile', user.uid]"
+          ><i class="fa fa-user"></i> Profile</a
+        >
+        <a
+          *ngIf="user.userType == 'teacher'"
+          class="dropdown-item"
+          [routerLink]="['/teacher/profile', user.uid]"
+          ><i class="fa fa-user"></i> Profile</a
         > -->
-        <!-- <a class="dropdown-item" href="#"><i class="fa fa-usd"></i> Payments<span class="badge badge-dark">42</span></a> -->
-        <!-- <a class="dropdown-item" href="#"><i class="fa fa-file"></i> Projects<span class="badge badge-primary">42</span></a> -->
         <div class="divider"></div>
         <!-- <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a> -->
         <a class="dropdown-item" (click)="logOut()"
